--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^6.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
