--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.25.0",
+    "body-parser": "^1.20.0",
     "clsx": "^1.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.1",
     "react": "^17.0.2",
